Updated site pages with new order page and linked navigation

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <li><a href="#how-it-works">How It Works</a></li>
                     <li><a href="#testimonials">Testimonials</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="order.html">Order</a></li>
                 </ul>
                 <button id="login-btn"><i class="fas fa-sign-in-alt"></i> Login</button>
             </nav>
@@ -37,24 +38,19 @@
                 <h2>Our Services</h2>
                 <div class="service-grid">
                     <div class="service-card">
-                        <i class="fas fa-shopping-cart"></i>
+                        <i class="fas fa-carrot"></i>
                         <h3>Groceries</h3>
-                        <p>Order fresh groceries and have them delivered directly to your door.</p>
+                        <p>Delivering fresh essentials from local groceries, specially selected based on student needs.</p>
                     </div>
                     <div class="service-card">
-                        <i class="fas fa-pills"></i>
-                        <h3>Pharmacy</h3>
-                        <p>Get over-the-counter medications and health products quickly.</p>
+                        <i class="fas fa-hamburger"></i>
+                        <h3>Restaurant Meals</h3>
+                        <p>Order from your favorite local restaurants and get delicious meals delivered to your door.</p>
                     </div>
                     <div class="service-card">
-                        <i class="fas fa-book"></i>
-                        <h3>Stationery</h3>
-                        <p>All your academic supplies and study materials in one place.</p>
-                    </div>
-                    <div class="service-card">
-                        <i class="fas fa-home"></i>
-                        <h3>Essentials</h3>
-                        <p>Household items and personal care products delivered to you.</p>
+                        <i class="fas fa-mug-hot"></i>
+                        <h3>Snacks & Drinks</h3>
+                        <p>Quick and affordable snack options to get you through study sessions and late nights.</p>
                     </div>
                 </div>
             </section>
@@ -65,18 +61,18 @@
                 <div class="steps">
                     <div class="step">
                         <i class="fas fa-mobile-alt"></i>
-                        <h3>1. Place Your Order</h3>
-                        <p>Browse our services and add items to your cart with ease.</p>
+                        <h3>1. Browse & Order</h3>
+                        <p>Choose from our essentials list, curated for UWI students, and place an order easily.</p>
                     </div>
                     <div class="step">
                         <i class="fas fa-store"></i>
-                        <h3>2. We Shop for You</h3>
-                        <p>We handpick your items from local stores, ensuring quality.</p>
+                        <h3>2. We Pick It Up</h3>
+                        <p>Our team shops directly at local groceries for the best quality and value.</p>
                     </div>
                     <div class="step">
                         <i class="fas fa-truck"></i>
-                        <h3>3. Fast Delivery</h3>
-                        <p>Your items are delivered to your doorstep in no time.</p>
+                        <h3>3. Get It Fast</h3>
+                        <p>Expect swift delivery of your essentials right to your dorm or apartment.</p>
                     </div>
                 </div>
             </section>
