--- a/order.html
+++ b/order.html
@@ -588,6 +588,97 @@ button:hover {
 .map-preview.active {
     display: block;
 }
+/* Mobile Adjustments */
+@media (max-width: 768px) {
+  #app {
+    padding: 15px;
+    max-width: 100%;
+    box-sizing: border-box;
+  }
+
+  .logo {
+    font-size: 1.3rem;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+  }
+
+  #order, #order-summary {
+    padding: 20px;
+  }
+
+  #order-form {
+    gap: 15px;
+  }
+
+  #order-form select,
+  #order-form input[type="time"] {
+    font-size: 14px;
+    padding: 8px;
+  }
+
+  .popup-content {
+    padding: 20px;
+    max-width: 90%;
+    box-sizing: border-box;
+  }
+
+  .subscription-details p,
+  .item span {
+    font-size: 14px;
+  }
+
+  .grocery-category {
+    padding: 15px;
+  }
+
+  .item {
+    flex-direction: column;
+    align-items: stretch;
+    gap: 10px;
+  }
+
+  .item input[type="number"] {
+    width: 100%;
+  }
+
+  .quantity-input {
+    width: 50px;
+    padding: 8px;
+    font-size: 14px;
+  }
+
+  .plus-btn, .minus-btn {
+    width: 25px;
+    height: 25px;
+    font-size: 14px;
+  }
+
+  /* Adjust location options for mobile */
+  .location-options {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .location-btn {
+    padding: 10px;
+    width: 100%;
+  }
+
+  .address-input {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+  }
+
+  button {
+    padding: 10px;
+    width: 100%;
+    font-size: 16px;
+  }
+}
+
 
 </style>
 <body>
