--- a/order.html
+++ b/order.html
@@ -811,7 +811,7 @@ button:hover {
       </div>
   </div>
   <div class="item">
-      <span>Matouk's Ketchup (TTD 8.50)</span>
+      <span>Matouk's Ketchup (TTD 9.50)</span>
       <div class="quantity-control">
           <button type="button" class="minus-btn">-</button>
           <input type="number" min="0" value="0" data-price="8.50" data-name="Matouk's Ketchup" class="quantity-input">
@@ -824,7 +824,7 @@ button:hover {
 <div id="beverages-items" class="grocery-category" style="display: none;">
   <h4>Beverages</h4>
   <div class="item">
-      <span>Dairy Dairy Milk (TTD 6.50)</span>
+      <span>Svelty Nestlé Milk (TTD 19.50)</span>
       <div class="quantity-control">
           <button type="button" class="minus-btn">-</button>
           <input type="number" min="0" value="0" data-price="6.50" data-name="Dairy Dairy Milk" class="quantity-input">
