--- a/drivers.html
+++ b/drivers.html
@@ -307,6 +307,103 @@ footer {
     #login-btn {
         margin-top: 1rem;
     }
+    /* ... (previous CSS remains unchanged) ... */
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-content {
+    background-color: var(--white);
+    padding: 2rem;
+    border-radius: 10px;
+    max-width: 400px;
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.popup-content h2 {
+    color: var(--primary-color);
+    margin-bottom: 1rem;
+}
+
+.popup-content p {
+    margin-bottom: 1.5rem;
+}
+
+.btn-primary, .btn-secondary {
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
+}
+
+.btn-primary {
+    background-color: var(--accent-color);
+    color: var(--primary-color);
+}
+
+.btn-primary:hover {
+    background-color: #e09736;
+}
+
+.btn-secondary {
+    background-color: var(--secondary-color);
+    color: var(--white);
+}
+
+.btn-secondary:hover {
+    background-color: var(--primary-color);
+}
+
+#login-form, #order-details {
+    text-align: left;
+}
+
+#login-form label, #login-form input {
+    display: block;
+    width: 100%;
+    margin-bottom: 1rem;
+}
+
+#login-form input {
+    padding: 0.5rem;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+#order-details ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+#order-details p {
+    margin-bottom: 0.5rem;
+}
+
+#accept-order, #decline-order {
+    margin-top: 1rem;
+}
+
+@media (max-width: 768px) {
+    .popup-content {
+        width: 90%;
+        max-width: none;
+    }
+}
+
+/* ... (rest of the CSS remains unchanged) ... */
 }</style>
 <body>
     <div id="app">
@@ -464,6 +561,101 @@ footer {
             alert('Thank you for your message. We will get back to you soon!');
             contactForm.reset();
         });
+        document.addEventListener('DOMContentLoaded', function() {
+    const demoPopup = document.getElementById('demo-popup');
+    const loginPopup = document.getElementById('login-popup');
+    const orderPopup = document.getElementById('order-popup');
+    const closePopupBtn = document.getElementById('close-popup');
+    const getStartedLink = document.getElementById('get-started-link');
+    const loginBtn = document.getElementById('login-btn');
+    const loginForm = document.getElementById('login-form');
+    const acceptOrderBtn = document.getElementById('accept-order');
+    const declineOrderBtn = document.getElementById('decline-order');
+    const body = document.body;
+
+    // Show the demo pop-up immediately
+    demoPopup.style.display = 'flex';
+    body.classList.add('popup-active');
+
+    closePopupBtn.addEventListener('click', function() {
+        demoPopup.style.display = 'none';
+        body.classList.remove('popup-active');
+    });
+
+    getStartedLink.addEventListener('click', function(e) {
+        e.preventDefault();
+        alert('You are now signed up as a driver in the demo environment.');
+        showOrderPopup();
+    });
+
+    loginBtn.addEventListener('click', function() {
+        loginPopup.style.display = 'flex';
+        body.classList.add('popup-active');
+    });
+
+    loginForm.addEventListener('submit', function(e) {
+        e.preventDefault();
+        loginPopup.style.display = 'none';
+        body.classList.remove('popup-active');
+        alert('You are now logged in as a driver in the demo environment.');
+        showOrderPopup();
+    });
+
+    function showOrderPopup() {
+        // Simulate order data
+        const orderData = {
+            id: 'ORD-' + Math.floor(1000 + Math.random() * 9000),
+            customer: 'John Doe',
+            items: ['Burger', 'Fries', 'Soda'],
+            pickup: 'Campus Food Court',
+            delivery: 'Taylor Hall, Room 203'
+        };
+
+        document.getElementById('order-id').textContent = orderData.id;
+        document.getElementById('customer-name').textContent = orderData.customer;
+        const orderItemsList = document.getElementById('order-items');
+        orderItemsList.innerHTML = '';
+        orderData.items.forEach(item => {
+            const li = document.createElement('li');
+            li.textContent = item;
+            orderItemsList.appendChild(li);
+        });
+        document.getElementById('pickup-location').textContent = orderData.pickup;
+        document.getElementById('delivery-location').textContent = orderData.delivery;
+
+        orderPopup.style.display = 'flex';
+        body.classList.add('popup-active');
+    }
+
+    acceptOrderBtn.addEventListener('click', function() {
+        orderPopup.style.display = 'none';
+        body.classList.remove('popup-active');
+        alert('Order accepted! Head to the pickup location.');
+    });
+
+    declineOrderBtn.addEventListener('click', function() {
+        orderPopup.style.display = 'none';
+        body.classList.remove('popup-active');
+        alert('Order declined. Waiting for new orders...');
+    });
+
+    // Smooth scrolling for navigation links
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        anchor.addEventListener('click', function (e) {
+            e.preventDefault();
+            document.querySelector(this.getAttribute('href')).scrollIntoView({
+                behavior: 'smooth'
+            });
+        });
+    });
+
+    // Form submission
+    const contactForm = document.getElementById('contact-form');
+    contactForm.addEventListener('submit', function(e) {
+        e.preventDefault();
+        alert('Thank you for your message. We will get back to you soon!');
+        contactForm.reset();
+    });
     });</script>
 
 </body>
