--- a/driver-orders.html
+++ b/driver-orders.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ErrandEase Driver - Order Management</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <style>
         :root {
             --primary-color: #232f3e;
-            --secondary-color: #37475a;
-            --accent-color: #f3a847;
+            --secondary-color: #ff9900;
+            --background-color: #f9f9f9;
             --text-color: #333;
-            --background-color: #f5f5f5;
             --white: #ffffff;
         }
 
@@ -30,10 +31,9 @@
         }
 
         .container {
-            width: 90%;
             max-width: 1200px;
             margin: 0 auto;
-            padding: 0 20px;
+            padding: 20px;
         }
 
         header {
@@ -74,146 +74,104 @@
         }
 
         nav ul li a:hover {
-            color: var(--accent-color);
+            color: var(--secondary-color);
         }
 
         main {
-            padding: 6rem 0 2rem;
+            margin-top: 80px;
+            padding: 20px;
         }
 
         .orders-container {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
+            gap: 20px;
         }
 
         .order-card {
             background-color: var(--white);
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            padding: 1.5rem;
+            padding: 20px;
+            transition: transform 0.3s ease;
+        }
+
+        .order-card:hover {
+            transform: translateY(-5px);
         }
 
         .order-card h3 {
             color: var(--primary-color);
-            margin-bottom: 1rem;
-        }
-
-        .order-details {
-            margin-bottom: 1rem;
+            margin-bottom: 10px;
         }
 
         .order-details p {
-            margin-bottom: 0.5rem;
+            margin-bottom: 5px;
         }
 
         .map-container {
-            width: 100%;
             height: 200px;
-            margin-bottom: 1rem;
+            margin-top: 10px;
+            border-radius: 5px;
+            overflow: hidden;
         }
 
         .btn {
             display: inline-block;
-            padding: 0.5rem 1rem;
-            border-radius: 5px;
+            padding: 10px 20px;
+            background-color: var(--secondary-color);
+            color: var(--primary-color);
             text-decoration: none;
-            text-align: center;
+            border-radius: 5px;
             transition: background-color 0.3s ease;
         }
 
-        .btn-primary {
-            background-color: var(--accent-color);
-            color: var(--primary-color);
-        }
-
-        .btn-primary:hover {
-            background-color: #e09736;
-        }
-
-        .btn-secondary {
-            background-color: var(--secondary-color);
-            color: var(--white);
-        }
-
-        .btn-secondary:hover {
-            background-color: var(--primary-color);
-        }
-
-        footer {
-            background-color: var(--primary-color);
-            color: var(--white);
-            padding: 2rem 0;
-            margin-top: 2rem;
-        }
-
-        .footer-content {
-            display: flex;
-            justify-content: center;
-            align-items: center;
+        .btn:hover {
+            background-color: #e68a00;
         }
 
         @media (max-width: 768px) {
-            nav {
-                flex-direction: column;
-                align-items: flex-start;
-            }
-
-            nav ul {
-                margin-top: 1rem;
-                flex-direction: column;
-            }
-
-            nav ul li {
-                margin-left: 0;
-                margin-bottom: 0.5rem;
+            .orders-container {
+                grid-template-columns: 1fr;
             }
         }
     </style>
 </head>
 <body>
-    <div id="app">
-        <header>
-            <nav>
-                <div class="logo"><i class="fas fa-shipping-fast" aria-hidden="true"></i> ErrandEase Driver</div>
-                <ul>
-                    <li><a href="#available-orders">Available Orders</a></li>
-                    <li><a href="#active-orders">Active Orders</a></li>
-                    <li><a href="#completed-orders">Completed Orders</a></li>
-                </ul>
-            </nav>
-        </header>
+    <header>
+        <nav>
+            <div class="logo"><i class="fas fa-shipping-fast"></i> ErrandEase Driver</div>
+            <ul>
+                <li><a href="#available-orders">Available Orders</a></li>
+                <li><a href="#active-orders">Active Orders</a></li>
+                <li><a href="#completed-orders">Completed Orders</a></li>
+            </ul>
+        </nav>
+    </header>
 
-        <main>
-            <section id="available-orders">
-                <h2>Available Orders</h2>
-                <div class="orders-container" id="available-orders-container">
-                    <!-- Available orders will be dynamically added here -->
-                </div>
-            </section>
-
-            <section id="active-orders">
-                <h2>Active Orders</h2>
-                <div class="orders-container" id="active-orders-container">
-                    <!-- Active orders will be dynamically added here -->
-                </div>
-            </section>
-
-            <section id="completed-orders">
-                <h2>Completed Orders</h2>
-                <div class="orders-container" id="completed-orders-container">
-                    <!-- Completed orders will be dynamically added here -->
-                </div>
-            </section>
-        </main>
-
-        <footer>
-            <div class="footer-content">
-                <p>&copy; 2023 ErrandEase Driver. All rights reserved.</p>
+    <main class="container">
+        <section id="available-orders">
+            <h2>Available Orders</h2>
+            <div class="orders-container" id="available-orders-container">
+                <!-- Available orders will be dynamically added here -->
             </div>
-        </footer>
-    </div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY"></script>
+        </section>
+
+        <section id="active-orders">
+            <h2>Active Orders</h2>
+            <div class="orders-container" id="active-orders-container">
+                <!-- Active orders will be dynamically added here -->
+            </div>
+        </section>
+
+        <section id="completed-orders">
+            <h2>Completed Orders</h2>
+            <div class="orders-container" id="completed-orders-container">
+                <!-- Completed orders will be dynamically added here -->
+            </div>
+        </section>
+    </main>
+
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const availableOrdersContainer = document.getElementById('available-orders-container');
@@ -224,67 +182,88 @@
             const orders = [
                 {
                     id: 'ORD-1001',
-                    customer: 'John Doe',
-                    items: ['Burger', 'Fries', 'Soda'],
-                    pickup: 'Campus Food Court',
-                    delivery: 'Taylor Hall, Room 203',
+                    customer: 'John Bovell',
+                    items: [
+                        { name: 'National Flour', quantity: 2, price: 12.50 },
+                        { name: 'Mahatma Rice', quantity: 1, price: 20.00 },
+                        { name: 'Kiss Bread', quantity: 1, price: 14.00 }
+                    ],
+                    store: 'FreshMart',
+                    deliveryAddress: 'Taylor Hall, Room 203, UWI St. Augustine',
+                    deliveryTime: '14:30',
                     status: 'available',
-                    lat: 18.006010,
-                    lng: -76.749241
+                    lat: 10.638931,
+                    lng: -61.402097
                 },
                 {
                     id: 'ORD-1002',
-                    customer: 'Jane Smith',
-                    items: ['Pizza', 'Wings', 'Garlic Bread'],
-                    pickup: 'Pizza Palace',
-                    delivery: 'Student Union Building',
+                    customer: 'Sarah Thompson',
+                    items: [
+                        { name: 'Pizza', quantity: 1, price: 90.93 },
+                        { name: 'Soda', quantity: 2, price: 5.50 }
+                    ],
+                    restaurant: 'Pizza Palace',
+                    deliveryAddress: 'Student Union Building, UWI St. Augustine',
+                    deliveryTime: '12:45',
                     status: 'active',
-                    lat: 18.005416,
-                    lng: -76.747395
+                    lat: 10.637608,
+                    lng: -61.400360
                 },
                 {
                     id: 'ORD-1003',
-                    customer: 'Bob Johnson',
-                    items: ['Textbook', 'Notebook', 'Pens'],
-                    pickup: 'Campus Bookstore',
-                    delivery: 'Library',
+                    customer: 'Michael Rodriguez',
+                    items: [
+                        { name: 'Colgate Toothpaste', quantity: 1, price: 15.00 },
+                        { name: 'Charmain Toilet Paper', quantity: 2, price: 18.00 }
+                    ],
+                    store: 'QuickStop',
+                    deliveryAddress: 'Canada Hall, UWI St. Augustine',
+                    deliveryTime: '10:15',
                     status: 'completed',
-                    lat: 18.004821,
-                    lng: -76.745549
+                    lat: 10.642544,
+                    lng: -61.401448
                 }
             ];
 
             function createOrderCard(order) {
                 const card = document.createElement('div');
                 card.className = 'order-card';
+                
+                let itemsHtml = order.items.map(item => 
+                    `<p>${item.name} x${item.quantity} - TTD ${(item.price * item.quantity).toFixed(2)}</p>`
+                ).join('');
+
+                let totalAmount = order.items.reduce((total, item) => total + (item.price * item.quantity), 0);
+
                 card.innerHTML = `
                     <h3>${order.id}</h3>
                     <div class="order-details">
                         <p><strong>Customer:</strong> ${order.customer}</p>
-                        <p><strong>Items:</strong> ${order.items.join(', ')}</p>
-                        <p><strong>Pickup:</strong> ${order.pickup}</p>
-                        <p><strong>Delivery:</strong> ${order.delivery}</p>
+                        <p><strong>Items:</strong></p>
+                        ${itemsHtml}
+                        <p><strong>Total Amount:</strong> TTD ${totalAmount.toFixed(2)}</p>
+                        <p><strong>${order.store ? 'Store' : 'Restaurant'}:</strong> ${order.store || order.restaurant}</p>
+                        <p><strong>Delivery Address:</strong> ${order.deliveryAddress}</p>
+                        <p><strong>Delivery Time:</strong> ${order.deliveryTime}</p>
                     </div>
                     <div class="map-container" id="map-${order.id}"></div>
                     ${order.status === 'available' ? `
-                        <a href="#" class="btn btn-primary accept-order" data-id="${order.id}">Accept Order</a>
+                        <a href="#" class="btn accept-order" data-id="${order.id}">Accept Order</a>
                     ` : order.status === 'active' ? `
-                        <a href="#" class="btn btn-secondary complete-order" data-id="${order.id}">Complete Order</a>
+                        <a href="#" class="btn complete-order" data-id="${order.id}">Complete Order</a>
                     ` : ''}
                 `;
                 return card;
             }
 
             function initMap(order) {
-                const map = new google.maps.Map(document.getElementById(`map-${order.id}`), {
-                    center: { lat: order.lat, lng: order.lng },
-                    zoom: 15
-                });
-                new google.maps.Marker({
-                    position: { lat: order.lat, lng: order.lng },
-                    map: map,
-                    title: order.delivery
-                });
+                const map = L.map(`map-${order.id}`).setView([order.lat, order.lng], 15);
+                L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                    attribution: '© OpenStreetMap contributors'
+                }).addTo(map);
+                L.marker([order.lat, order.lng]).addTo(map)
+                    .bindPopup(order.deliveryAddress)
+                    .openPopup();
             }
 
             function renderOrders() {
